# freight-intelligence-dashboard

./: .env.example  .flake8  .gitignore  LICENSE  NOTICE  OWNERSHIP.md  README.md  app.py  data.py  freight_data.csv  freight_heatmap.py  index.html  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  talking_points.md  visualization.py
.circleci/: config.yml
.github/workflows/: update_dashboard.yml
freight_intelligence_dashboard/: __init__.py  __main__.py  app.py  data.py  visualization.py
freight_intelligence_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_data_behavior.py
